switching to vite...

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
       body {
         background-color: #1a1b1e;
       }
+
+      #root {
+        height: 100%;
+        width: 100%;
+      }
     </style>
   </head>
   <body>
