--- a/packages/alphamath/index.html
+++ b/packages/alphamath/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
-    <title>alphamath by dennis</title>
+    <title>alphamath</title>
 
     <style>
       body {
